--- a/src/main/resources/templates/admin.mustache
+++ b/src/main/resources/templates/admin.mustache
@@ -4,10 +4,10 @@
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.8, initial-scale=1.8, maximum-scale=1.8,minimum-scale=1.8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Main Page</title>
-    
+   
 </head>
-    <body>
-        <h4>mainPage</h4>
-    </body>
+<body>
+    <h4>Admin Page</h4> 
+</body>
 
 </html>
