--- a/src/main/resources/templates/admin.mustache
+++ b/src/main/resources/templates/admin.mustache
@@ -1,10 +1,10 @@
-<html lang="ko">
+<html>
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.8, initial-scale=1.8, maximum-scale=1.8,minimum-scale=1.8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Main Page</title>
-   
+    <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
 </head>
 <body>
     <h4>Admin Page</h4> 
