--- a/src/main/resources/templates/join.mustache
+++ b/src/main/resources/templates/join.mustache
@@ -6,9 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
 </head>
-    <body>
-        <h4>mainPage</h4>
-        <p>mustache파일은 new에서 file로 생성 직접 .mustache를 붙여 만든다. 생성한 파일은 비어있으며 빈 파일에 doc를 입력후 tab키를 누르면 자동으로 기본 태그가 완성 된다.</p>
-    </body>
-
+<body>
+    <form action="/joinProc" method="post" name="joinForm">
+        <input type="text" name="uid" placeholder="Username"/>
+        <input type="password" name="pass" placeholder="Password"/>
+        <input type="submit" value="Join"/>
+    </form>
+</body>
 </html>
