join 중복검사 db insert admin권환 확인 완료

--- a/src/main/resources/templates/main.mustache
+++ b/src/main/resources/templates/main.mustache
@@ -8,7 +8,7 @@
 </head>
     <body>
         <h4>mainPage</h4>
-        <p>mustache파일은 new에서 file로 생성 직접 .mustache를 붙여 만든다. 생성한 파일은 비어있으며 빈 파일에 doc를 입력후 tab키를 누르면 자동으로 기본 태그가 완성 된다.</p>
+        <!--<p>mustache파일은 new에서 file로 생성 직접 .mustache를 붙여 만든다. 생성한 파일은 비어있으며 빈 파일에 doc를 입력후 tab키를 누르면 자동으로 기본 태그가 완성 된다.</p>-->
     </body>
 
 </html>
