--- a/src/main/resources/templates/join.mustache
+++ b/src/main/resources/templates/join.mustache
@@ -8,8 +8,8 @@
 </head>
 <body>
     <form action="/joinProc" method="post" name="joinForm">
-        <input type="text" name="uid" placeholder="Username"/>
-        <input type="password" name="pass" placeholder="Password"/>
+        <input type="text" name="username" placeholder="Username"/>
+        <input type="password" name="password" placeholder="Password"/>
         <input type="submit" value="Join"/>
     </form>
 </body>
